fix z-index bug

--- a/src/components/styles/index.less
+++ b/src/components/styles/index.less
@@ -8,6 +8,7 @@
     bottom: 40px;
     left: 0;
     width: 100%;
+    z-index: 1000;
 
     .puzzleImg {
       display: block;
@@ -16,7 +17,6 @@
       top: 0;
       width: auto;
       height: 100%;
-      z-index: 9999;
     }
 
     .bgImg {
